--- a/Read/ReadMeWiki/08.其他优化/01.so库加载基础介绍.md
+++ b/Read/ReadMeWiki/08.其他优化/01.so库加载基础介绍.md
@@ -27,7 +27,8 @@
     }
     ```
 - so库是干什么的
-    - 实现完成之后，打包编译成so文件，那么我们在应用层就可以调用这个native方法，完事，native方法就自动的去找so文件中的方法，有没有实现，找到后去执行它。所以我们定义的native方法就要和引入的so文件在同一个包名下，不然两者是分立的。
+    - 实现完成之后，打包编译成so文件，那么我们在应用层就可以调用这个native方法，完事，native方法就自动的去找so文件中的方法，有没有实现，找到后去执行它。
+    - 所以我们定义的native方法就要和引入的so文件在同一个包名下，不然两者是分立的。
 
 
 
