--- a/Read/ReadShareWiki/00.综合专项/00.杨充个人简历.md
+++ b/Read/ReadShareWiki/00.综合专项/00.杨充个人简历.md
@@ -93,7 +93,7 @@
 - 北京清科集团Android开发经历
     - 1.根据产品的需求，对应用进行开发和后期的迭代维护，并且逐渐制定了代码注释命名规范文档。
     - 2.将接手过来的代码，逐步重构，慢慢由MVC架构模式转变成MVP架构模式，对项目模块结构进行划分和抽象，较大程度解决之前代码臃肿和维护难问题。
-    - 3.使用了builder模式封装了状态管理器库，有效管理了加载数据中，加载数据成功，失败，空数据，网络错误等多种试图页面切换。
+    - 3.使用了builder模式封装了状态管理器库，有效管理了加载数据中，加载数据成功，失败，空数据，网络错误等多种试图页面切换。开源后颇受好评……
 
 
 ### 5.个人评价
